Unset :hover in inner documents https://bugs.webkit.org/show_bug.cgi?id=114446

Reviewed by Antonio Gomes.

Source/WebCore:

Fixes a regression from r145126 where hover nodes in inner documents was sometimes
not unset. Additionally it uses the new api from r145126 to avoid an unnecessary
hit test in touch-event handling.

Test: fast/events/touch/frame-hover-update.html

* dom/Document.cpp:
(WebCore::Document::updateHoverActiveState):
* page/EventHandler.cpp:
(WebCore::shouldGesturesTriggerActive):
(WebCore::EventHandler::handleTouchEvent):

LayoutTests:

Test expected effect of touch events on hover state.

* fast/events/touch/frame-hover-update-expected.txt: Added.
* fast/events/touch/frame-hover-update.html: Added.

Canonical link: https://commits.webkit.org/133194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148672 268f45cc-cd09-0410-ab3c-d52691b4dbfc